[package]
name = "optdrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_print = "1.0.0"
glob = "0.3.1"
rayon = "1.5"
regex = "1.10.2"
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
zip = "0.6"
bincode = "2.0.0-rc.3"